# wn2vec

./: .gitignore  404.html  README.md  comnConcepts.py  index.html  mSigDBgeneSetTransformer.py  meshImporter.py  meshSetTransformer.py  mkdocs.yml  pyproject.toml  requirements.txt  runWNT.py  testImport.py  wn2vec_meshsets.tsv
attic/: index.html
concept_sets/: index.html
conceptset_evaluation/: index.html
data/: 0_mesh_sets.tsv  100k_replaced.txt  100pubmed_cr.tsv  10m_comn_concepts.tsv  10m_few_comn_concepts.tsv  comn_concepts.tsv  gene_sets.tsv  gene_sets_100.tsv  gene_sets_biocarta.tsv  gene_sets_bp.tsv  genesets.tsv  mesh_sets.tsv  mesh_target_ids.tsv  output100abstracts.tsv  pid_geneset.tsv  sample100abstracts.tsv
docs/: Makefile  attic.md  concept_sets.md  concept_sets.rst  conceptset_evaluation.md  conceptset_evaluation.rst  conf.py  index.md  index.rst  install.md  install.rst  installation.md  marea.md  marea.rst  stop_words.md  tutorial.md  tutorial.rst  word2vec.md  word2vec.rst  wordnetreplacement.md  wordnetreplacement.rst
embedding/: mean_dist_cluster.ipynb  wn2vec_cosine.ipynb
install/: index.html
marea/: index.html
marea1.0/: newFilter.py
myenv/: pyvenv.cfg
notebooks/: nltkdemo.ipynb
script/: read_dataset.py  replace.py
scripts/: 1m_all_filt_word2vec.wordvectors  all_few_comn_concepts.tsv  all_few_comp.tsv  apply_transform.py  best_threshold.py  comn_concepts.tsv  compare_embeddings.py  filter_by_year.py  filter_by_year.sh  mSigDBgeneSetTransformer.py  meshImporter.py  metadata  metadata_1  replace.py  runWNT.py  run_assessment.py  run_gensim_word2vec.py  run_w2v.py  run_wn_replacement.py  run_word2vec.py  run_word2vec_gpu.py  run_word2vec_training.py  test.txt  testImport.py  test_replaced_words_position.py  test_replacement.py  tf_concept.py  transform.py  vector  visualize_comparison.R  visualize_comparison2.R  visualize_comparison3.R  wn_transformer.py  wntransformer.py  wntransformer.sh  word2vector.py
search/: search_index.json
singularity/: filter_by_year.sh  wntransformer.sh  word2vector.sh  word2vector_sumner.sh
stop_words/: index.html
tests/: __init__.py  bestThreshold100.tx  bestThreshold10000.txt  bestThreshold2.txt  best_threshold.py  replaced100.txt  replaced10000.txt  replaced2.txt  replaced_words_position.py  test_counter.py  test_replace.py  test_synonym_mapper.py  test_transformer.py  testoop.py  (+2 more)
(+95 files in other folders)
